# atat

./: .clang-tidy  .gitignore  CMakeLists.txt  MODERNIZATION.md  README.md  defs.txt  install_ipopt.sh  linked_targets.txt
.github/workflows/: clang-format.yml  cmake-single-platform.yml  codeql.yml  msvc.yml
include/: CVMDataHolder.h  CVMLogger.h  CVMModel.h  anyfft.h  apb.h  array.h  arrayiterator.h  arraylist.h  binstream.h  calccorr.h  calcmf.h  chull.h  clus_str.h  curvefit.h  drawpd.h  equil.h  fftn.h  findsym.h  fixagg.h  fxvector.h  gceutil.h  getvalue.h  gslcurvefit.h  gstate.h  integer.h  keci.h  kmeci.h  lattype.h  legacylinklist.h  linalg.h  linklist.h  linsolve.h  lstsqr.h  machdep.h  mclib.h  meshcalc.h  meshutil.h  misc.h  mmclib.h  mpiinterf.h  (+21 more)
include/functools/: functools.h
include/iteratortools/: hit_enumerator.hpp  hit_zipper.hpp  hysysiteratortools.hpp
include/itertools/: base.h  chain.h  enumerate.h  filter.h  imap.h  itertools.h  itertoolsbase.h  itertoolsiterator.h  itertoolstuples.h  itertoolswrapper.h  range.h  zip.h
python/: pythonfunctions.py  setup.py
src/: 3d2gnu.c++  CVMDataHolder.c++  CVMLogger.c++  CVMModel.c++  analrelax.c++  apb.c++  apbhelp.c++  bgsdqmc.c++  calccorr.c++  calcelas.c++  calces.c++  checkcell.c++  chull.c++  clus_str.c++  clusover.c++  cmpstr.c++  cna.c++  corrdump.c++  corrdumphelp.c++  csfit.c++  csl.c++  curvefit.c++  cv.c++  cvhelp.c++  cvmclus.c++  cvmclushelp.c++  ehmass.c++  emc2.c++  emc2help.c++  epic.c++  epichelp.c++  equivclus.c++  felec.c++  felechelp.c++  fempmag.c++  fempmaghelp.c++  findsym.c++  fitfc.c++  fitfchelp.c++  fitsvsl.c++  (+81 more)
src/src/: CVMDataHolder.c++  apbhelp.c++  calccorr.c++  clus_str.c++  corrdump.c++  curvefit.c++  equivclus.c++  gensqs.c++  getvalue.c++  lstsqr.c++  mcsqs.c++  mcsqshelp.c++  parse.c++
tests/: functools_test.c++  install_catch.sh  itertools_test_chain.c++  itertools_test_enumerate.c++  itertools_test_filter.c++  itertools_test_filterfalse.c++  itertools_test_imap.c++  itertools_test_range.c++  itertools_test_zip.c++  testtools.h  testtools_test.c++
